# pybr2023

./: README.md  pyproject.toml
jogomapa/: __init__.py  __main__.py  contants.py  game_exceptions.py  mapa_0.txt
jogomapa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
jogomapa/mapas/: mapa_0.txt  mapa_1.txt
jogomapa/maps/: mapa_0.txt  mapa_1.txt
